// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opened-resolved-filter Renders \`opened-resolved-filter\` with custom props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Filter on Open/Resolved
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout"
        >
          <div
            class="v-input mt-0 v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="height: auto;"
              >
                <div
                  aria-labelledby="input-70"
                  class="v-input--radio-group__input"
                  role="radiogroup"
                >
                  <div
                    class="v-radio theme--light v-item--active"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light primary--text"
                      >
                        radio_button_checked
                      </i>
                      <input
                        aria-checked="true"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="true"
                      />
                      <div
                        class="v-input--selection-controls__ripple primary--text"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                      <input
                        aria-checked="false"
                        name="opened"
                        role="radio"
                        type="radio"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened and recent resolved alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                      <input
                        aria-checked="false"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="false"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      All resolved alarms
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`opened-resolved-filter Renders \`opened-resolved-filter\` with default props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Filter on Open/Resolved
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout"
        >
          <div
            class="v-input mt-0 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="height: auto;"
              >
                <div
                  aria-labelledby="input-55"
                  class="v-input--radio-group__input"
                  role="radiogroup"
                >
                  <div
                    class="v-radio theme--light v-item--active"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light primary--text"
                      >
                        radio_button_checked
                      </i>
                      <input
                        aria-checked="true"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="true"
                      />
                      <div
                        class="v-input--selection-controls__ripple primary--text"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                      <input
                        aria-checked="false"
                        name="opened"
                        role="radio"
                        type="radio"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened and recent resolved alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                      <input
                        aria-checked="false"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="false"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      All resolved alarms
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
